--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!-- Mobile Menu -->
     <div class="mobile-menu" id="mobile-menu">
         <div class="mobile-menu-header">
-            <img src="assets/logos/pidot-logo.svg" alt="PI DOT Logo">
+            <img src="assets/logos/pidot-logo.svg" alt="PI DOT Logo" width=130px>
             <button class="mobile-menu-close" id="mobile-menu-close">
                 <i class="fas fa-times"></i>
             </button>
