--- a/leadership.html
+++ b/leadership.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leadership | PI DOT</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css\leadership-extra.css">
+    <link rel="stylesheet" href="css/extra-leadership.css">
     <link rel="stylesheet" href="css/themes.css" id="theme-style">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
