--- a/careers_register.html
+++ b/careers_register.html
@@ -19,7 +19,7 @@
 }
     </style>
 </head>
-<body class="light-theme">
+<body class="dark-theme">
     <!-- Header (Same as homepage) -->
     <!-- Top Announcement Bar -->
     <div class="announcement-bar">
