--- a/genesis.html
+++ b/genesis.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/themes.css" id="theme-style">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
-<body class="light-theme">
+<body class="dark-theme">
     <header>
         <div class="container">
             <a href="index.html" class="logo">
